// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-ktyGiW eVxLVG"
>
  <input
    checked={true}
    className="sc-cWAxUP fkvzqw"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-gVflOg fpAlPI"
  >
    <span
      className="sc-kNCMYV jVspKb"
    >
      <div
        checked={true}
        className="sc-iinbLa knKgIF"
      />
    </span>
    <p
      className="sc-jUwIko gxSaBZ"
      size={14}
    >
      Checkbox with checked state by default
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-ktyGiW eVxLVG"
>
  <input
    className="sc-cWAxUP fkvzqw"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-gVflOg fpAlPI"
  >
    <span
      className="sc-kNCMYV jVspKb"
    >
      <div
        checked={false}
        className="sc-iinbLa ihCoag"
      />
    </span>
    <p
      className="sc-jUwIko gxSaBZ"
      size={14}
    >
      Disabled Checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-ktyGiW eVxLVG"
>
  <input
    className="sc-cWAxUP fkvzqw"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-gVflOg fpAlPI"
  >
    <span
      className="sc-kNCMYV jVspKb"
    >
      <div
        checked={false}
        className="sc-iinbLa ihCoag"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Read only 1`] = `
<label
  className="sc-ktyGiW eVxLVG"
>
  <input
    className="sc-cWAxUP fkvzqw"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="sc-gVflOg fpAlPI"
  >
    <span
      className="sc-kNCMYV jVspKb"
    >
      <div
        checked={false}
        className="sc-iinbLa ihCoag"
      />
    </span>
    <p
      className="sc-jUwIko gxSaBZ"
      size={14}
    >
      Readonly checkbox
    </p>
  </div>
</label>
`;

exports[`Checkbox renders default 1`] = `
<label
  className="sc-ktyGiW eVxLVG"
>
  <input
    className="sc-cWAxUP fkvzqw"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-gVflOg fpAlPI"
  >
    <span
      className="sc-kNCMYV jVspKb"
    >
      <div
        checked={false}
        className="sc-iinbLa ihCoag"
      />
    </span>
    <p
      className="sc-jUwIko gxSaBZ"
      size={14}
    >
      Default Checkbox
    </p>
  </div>
</label>
`;
